# Self-Consistency-CoT

./: .env.example  .gitignore  AGENT.md  README.md  pyproject.toml  requirements.txt
src/: __init__.py  agent.py  cot_sc.py
src/core/: sampler.py  voting.py
src/utils/: config.py  console.py  fingerprint.py
