[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cot-sc"
version = "0.1.0"
description = "Chain-of-Thought Self-Consistency agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "langchain-openai>=0.2.0",
  "langchain-core>=0.3.0",
  "python-dotenv>=1.0.0",
  "langgraph>=0.2.0",
]

[project.scripts]
cot-sc-agent = "src.agent:main"

[tool.setuptools]
packages = ["src", "src.core", "src.utils"]
